fix(button): Change paddings sizes on mobile

--- a/src/_sass/components/_button.scss
+++ b/src/_sass/components/_button.scss
@@ -3,11 +3,15 @@
   font-weight: 500;
   line-height: 1.5;
   text-align: center;
-  padding: 8px 16px;
+  padding: 8px 12px;
   display: inline-block;
   text-decoration: none;
   border-radius: 4px;
   cursor: pointer;
+
+  @include breakpoint(medium up)  {
+    padding: 8px 16px;
+  }
 
   &:disabled {
     pointer-events: none;
